--- a/ojx/pom.xml
+++ b/ojx/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.ojx</groupId>
     <artifactId>ojx</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
